--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ h1 {
     font-weight: 900;
     line-height: 1.36;
     letter-spacing: 0.03em;
+
 }
 h2 {
     font-size: 14px;
@@ -137,9 +138,9 @@ address {
 .menu-links {
     text-decoration: none; 
     letter-spacing: 0.03em;
-    display: block;
-    width: 53px;
-    height: 16px;
+    display: inline-flex;
+    justify-content: space-around;
+
 }
 .link {
     text-decoration: none;
@@ -181,6 +182,7 @@ li {
     font-size: 16px;
     font-weight: 700;
     letter-spacing: 0.06em;
+    border-radius: 4px;
 }
 .nav-link {
     text-decoration: none;
@@ -194,9 +196,29 @@ li {
     letter-spacing: 0.03em;
     font-size: 14px;
     font-weight: 500;
+    display: flex;
+    flex-direction: column;
 }
 .menu-link:hover,
 .menu-link:active {
     cursor: pointer;
     color: #2196F3;
+}
+.container-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.container-mainflex {
+    padding-top: 200px;
+    padding-bottom: 280px;
+    max-width: 696px;
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
+}
+.list {
+    display: flex;
+    list-style-type: none;
+    margin-bottom: 94px;
 }
