--- a/css/styles.css
+++ b/css/styles.css
@@ -10,18 +10,22 @@ body {
     font-family: Roboto, sans-serif;
     color: black;
     letter-spacing: 0.03em;
-    margin: 0 auto;
 }
 .button-primary:hover ,
 .button-primary:active {
     cursor: pointer;
 }
+img {
+    display: block;
+}
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 .main-footer {
     background-color: #2F303A;
     color: black;
-    display: flex;
-    margin: 0 auto;
-    height: 252px;
+    padding: 60px 0;
 }
 .main-first {
     background-color:#2F303A;
@@ -36,6 +40,7 @@ body {
     height: 80px;
     justify-content: flex-start;
     align-items: baseline;
+    border-bottom: 1px solid rgba(236, 236, 236, 1);
 }
 .nav-link:hover,
 .nav-link:active {
@@ -72,11 +77,17 @@ h2 {
     cursor: pointer;
     background: #2196F3;
     color: #FFFFFF;
-
+    box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 ul {
     list-style-type: none;
     letter-spacing: 0.03em;
+}
+.descriptions-text {
+    list-style-type: none;
+    display: flexbox;
+    order: 3;
 }
 button {
     color: #FFFFFF;
@@ -86,12 +97,26 @@ button {
 .buttons {
     color: #212121;
     background-color:#F5F4FA; 
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    border: none;
+    padding: 6px 22px;
+    border-radius: 4px;
 }
 p {
     color: #757575;
     letter-spacing: 0.03em;
     font-size: 14px;
     line-height: 1.71;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 .work-text {
     color: #212121;
@@ -133,17 +158,30 @@ p {
     line-height: 1.87;
     letter-spacing: 0.03em;
 }
-address {
+.portfolio-buttons {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    column-gap: 8px;
+    padding-bottom: 50px;
+}
+.address {
     font-style: normal;
     color: #FFFFFF;
     letter-spacing: 0.03em;
     font-size: 14px;
     line-height: 1.71;
+    display: flex;
+    padding-bottom: 9px;
 }
 .links {
     color:#FFFFFF99;
     text-decoration: none;
+    font-size: 14px;
+    line-height: 1.71;
     letter-spacing: 0.03em;
+    display: flex;
+    padding-bottom: 9px;
 }
 .links:hover,
 .links:active {
@@ -161,16 +199,15 @@ address {
     display: flex;
     justify-content: end;
     padding-top: 32px;
-   
-
 }
 .link {
     text-decoration: none;
     color: #757575;
     font-size: 14px;
     font-weight: 500;
-    letter-spacing: 0.03em;
+    letter-spacing: 0.02em;
     line-height: 1.17;
+    padding-left: 50px;
 }
 .link:hover ,
 .link:active {
@@ -247,9 +284,9 @@ li {
 }
 .contact {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
 }
-.menu {
+.container-menu {
     display: flex;
     padding-top: 24px;
     padding-bottom: 25px;
@@ -257,10 +294,15 @@ li {
     border: 5px solid white;
     height: 80px;
     box-sizing: border-box;
+    align-items: center;
 }
 .list {
     display: flex;
-    justify-content: space-around;
-    padding-left: 93px;
-    padding-right: 371px;
+    column-gap: 46px;
+    list-style-type: none;
+}
+.desc-list {
+    list-style-type: none;
+    display: flex;
+    column-gap: 30px;
 }
