--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,12 @@ p {
     column-gap: 8px;
     padding-bottom: 50px;
 }
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    gap: 30px;
+}
 .address {
     font-style: normal;
     color: #FFFFFF;
@@ -235,6 +241,8 @@ p {
     font-weight: 700;
     line-height: 1.17;
     text-decoration: none;
+    display: flex;
+    padding-bottom: 20px;
 }
 .studio {
     color: #FFFFFF;
@@ -286,15 +294,10 @@ li {
     display: flex;
     flex-direction: column;
 }
-.container-menu {
+.menu {
     display: flex;
-    padding-top: 24px;
-    padding-bottom: 25px;
-    justify-content: space-around;
-    border: 5px solid white;
-    height: 80px;
-    box-sizing: border-box;
     align-items: center;
+    justify-content: space-between;
 }
 .list {
     display: flex;
