--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
 }
 img {
     display: block;
+
 }
 .section {
     padding-top: 94px;
@@ -80,6 +81,8 @@ h2 {
     letter-spacing: 0.03em;
     text-align: left;
     color: #212121;
+    padding-bottom: 10px;
+    padding-top: 94px;
 }
 .buttons:hover ,
 .buttons:active {
@@ -133,15 +136,17 @@ p {
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
+    padding-bottom: 94px;
 }
 .work-text {
     color: #212121;
     font-size: 36px;
-    font-weight: 900;
+    font-weight: 700;
     line-height: 1.16;
     letter-spacing: 0.03em;
     text-align: center;
     padding-bottom: 50px;
+    margin-top: -94px;
 }
 .work-list {
     list-style-type: none;
@@ -151,6 +156,8 @@ p {
 }
 .team {
     text-align: center;
+    background: #F5F4FA;
+    margin-top: 94px;
 }
 .team-list {
     list-style-type: none;
@@ -161,11 +168,11 @@ p {
 .team-item {
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
+    border-radius: 0px 0px 4px 4px;
+    margin-bottom: 94px;
 }
 .fig-team {
-    padding: 30px 20px;
+    margin: 30px 20px;
 }
 .team-text {
     color: #212121;
@@ -175,6 +182,7 @@ p {
     letter-spacing: 0.03em;
     text-align: center;
     padding-bottom: 50px;
+    padding-top: 188px;
 }
 .team-name {
     color: #212121;
@@ -184,6 +192,7 @@ p {
     letter-spacing: 0.03em;
     text-align: center;
     padding-bottom: 10px;
+    padding-top: 30px;
 }
 .team-job {
     color: #757575;
@@ -231,6 +240,7 @@ p {
 .links {
     color:#FFFFFF99;
     text-decoration: none;
+    font-style: normal;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
